--- a/deploymentservice.yaml
+++ b/deploymentservice.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment # Kubernetes resource kind we are creating
 metadata:
-  name: payapp-starlight-deployment
+  name: worldtime-starlight-deployment
 spec:
   selector:
     matchLabels:
-      app: payapp-starlight
+      app: worldtime-starlight
   replicas: 1 # Number of replicas that will be created for this deployment
   template:
     metadata:
       labels:
-        app: payapp-starlight
+        app: worldtime-starlight
     spec:
       containers:
         - name: spring-boot-k8s
-          image: mustafamirza/payapp-starlight # Image that will be used to containers in the cluster
+          image: mustafamirza/worldtime # Image that will be used to containers in the cluster
           imagePullPolicy: Always
           env:
           - name: orch_ip
@@ -31,7 +31,7 @@ spec:
             value: "true"
           - name: AVCD_SERVICE_TAG
             value: payapp-starlight
-          name: log4j-debian10-root-3x1-m-web-container
+          name: worldtime-debian10-root-web-container
           ports:
             - containerPort: 8080 # The port that the container is running on in the cluster
 
@@ -41,10 +41,10 @@ spec:
 apiVersion: v1 # Kubernetes API version
 kind: Service # Kubernetes resource kind we are creating
 metadata: # Metadata of the resource kind we are creating
-  name: payapp-starlight-samplesvc
+  name: worldtime-starlight-samplesvc
 spec:
   selector:
-    app: payapp-starlight
+    app: worldtime-starlight
   ports:
     - protocol: "TCP"
       port: 8080 # The port that the service is running on in the cluster
