--- a/deploymentservice.yaml
+++ b/deploymentservice.yaml
@@ -29,8 +29,10 @@ spec:
             value: "true"
           - name: enable_avocado
             value: "true"
-          - name: AVCD_SERVICE_TAG
-            value: worldtime-starlight
+          - name: AVCD_METADATA_FILENAME
+            value: "/metadata.json"
+          #- name: AVCD_SERVICE_TAG
+          #  value: worldtime-starlight
           name: worldtime-debian12-root-web-container
           ports:
             - containerPort: 8080 # The port that the container is running on in the cluster
